# bitflagset

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: bench-readme.yml  ci.yml
benches/: atomic.rs  vs_bitflags.rs  vs_bitvec.rs
bitflagset-derive/: Cargo.toml
bitflagset-derive/src/: lib.rs
scripts/: update_readme_bench.sh
src/: atomic.rs  atomic_boxed.rs  atomic_slice.rs  bitset.rs  boxed.rs  enumset.rs  lib.rs  slice.rs
